WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283051
[WebGPU] ICB clamp functions are missing call to useResource:
https://bugs.webkit.org/show_bug.cgi?id=283051
Summary
[WebGPU] ICB clamp functions are missing call to useResource:
Mike Wyrzykowski
Reported
2024-11-13 07:28:13 PST
[WebGPU] ICB clamp functions are missing call to useResource:
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-11-13 07:28:26 PST
rdar://139735309
Mike Wyrzykowski
Comment 2
2024-11-13 07:32:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36591
EWS
Comment 3
2024-11-13 11:47:40 PST
Committed
286551@main
(1baaf5d93941): <
https://commits.webkit.org/286551@main
> Reviewed commits have been landed. Closing PR #36591 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug