[WebGPU] ICB clamp functions are missing call to useResource: https://bugs.webkit.org/show_bug.cgi?id=283051 rdar://139735309

Reviewed by Tadeu Zagallo.

The index buffer was part of an AB but we weren't calling useResource: on it,
leading it to potentially not being resident.

* LayoutTests/fast/webgpu/nocrash/fuzz-283051-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-283051.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::drawIndexed):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::executeBundles):

Canonical link: https://commits.webkit.org/286551@main